--- a/content/tools/index.html
+++ b/content/tools/index.html
@@ -2,6 +2,7 @@
 <a href="encode"><p class="btn">Decode URL</p></a>
 <div class="info">
 	<ul>
-		<li>Choose whatever tool you need.</li>
+		<li>The tools are implemented in javaScript.</li>
+		<li>You can save a copy at your local disk and run it within any modern browser.</li>
 	</ul>
 </div>
